@@ -11,9 +11,9 @@ libgladesharpglue_la_LDFLAGS = -module -avoid-version
 libgladesharpglue_la_SOURCES = 	\
 	gladexml.c
 
-libgladesharpglue_la_LIBADD = $(BASE_DEPENDENCIES_LIBS)
+libgladesharpglue_la_LIBADD = $(GLADE_LIBS)
 
-INCLUDES = $(BASE_DEPENDENCIES_CFLAGS) -I$(top_srcdir)
+INCLUDES = $(GLADE_CFLAGS) -I$(top_srcdir)
 
 libgladesharpglue.dll: $(libgladesharpglue_la_OBJECTS) libgladesharpglue.rc libgladesharpglue.def
 	./build-dll libgladesharpglue $(VERSION)
