@@ -1,5 +1,12 @@
 2004-04-30  Mike Kestner  <mkestner@ximian.com>
 
+	* configure.in : remove BASE_DEPENDENCIES LIBS and CFLAGS and
+	expose more specific versions for glue building.
+	* */glue/Makefile.am : use more specific versions of LIBS and CFLAGS
+	to reduce the ldd footprint.
+
+2004-04-30  Mike Kestner  <mkestner@ximian.com>
+
 	* configure.in : AC_SUBST an API_VERSION=1.0.0.0 for the 
 	AssemblyVersionAttributes.
 	* */AssemblyInfo.cs.in : s/@VERSION@/@API_VERSION@/
